--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 MONGODB_URI=mongodb://localhost:27017/healthconnect
 PORT=20000
+
+#MYSQL CONFIG
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=
+MYSQL_DATABASE=healthconnect
