--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "destroy": "^1.2.0",
     "detect-libc": "^2.0.3",
     "diff": "^4.0.2",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "ecdsa-sig-formatter": "^1.0.11",
     "ee-first": "^1.1.1",
     "emoji-regex": "^8.0.0",
@@ -104,6 +104,7 @@
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
+    "mysql2": "^3.12.0",
     "negotiator": "^0.6.3",
     "node-addon-api": "^5.1.0",
     "node-fetch": "^2.7.0",
@@ -127,6 +128,7 @@
     "safer-buffer": "^2.1.2",
     "semver": "^7.6.3",
     "send": "^0.19.0",
+    "sequelize": "^6.37.5",
     "serve-static": "^1.16.2",
     "set-blocking": "^2.0.0",
     "set-function-length": "^1.2.2",
