user config updates

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-MONGODB_URI=mongodb://localhost:27017/healthconnect
+# MONGO DB CONFIGURATION
+#MONGODB_URI=mongodb://localhost:27017/healthconnect
 PORT=20000
+HOST = 10.0.2.2
 
 #MYSQL CONFIG
 MYSQL_HOST=localhost
