--- a/.env
+++ b/.env
@@ -1,11 +1,18 @@
 # MONGO DB CONFIGURATION
 #MONGODB_URI=mongodb://localhost:27017/healthconnect
-PORT=20000
+PORT= 20000
 HOST = 10.0.2.2
 
-#MYSQL CONFIG
-MYSQL_HOST=localhost
+# MYSQL CONFIG dev
+# MYSQL_HOST=localhost
+# MYSQL_PORT=3306
+# MYSQL_USER=root
+# MYSQL_PASSWORD=
+# MYSQL_DATABASE=healthconnect
+
+# MYSQL CONFIG qa
+MYSQL_HOST=borsxwiezfcrxqvq1tyb-mysql.services.clever-cloud.com
 MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=
-MYSQL_DATABASE=healthconnect
+MYSQL_USER=ukq3g0pwco5zd50a
+MYSQL_PASSWORD=cWlTWdaigHjjwImqo4FK
+MYSQL_DATABASE=borsxwiezfcrxqvq1tyb
